fix: update title page

--- a/purplehack.tex
+++ b/purplehack.tex
@@ -17,20 +17,25 @@
 
 \title{Purple Hack}
 \author{Maximilian Hart}
-\date{December 2025}
+\date{Last Updated: December 2025}
+
+\usepackage{titling}
+\renewcommand\maketitlehooka{\null\mbox{}\vfill}
+\renewcommand\maketitlehookd{\vfill\null}
 
 \begin{document}
 
+\begin{titlingpage}
 \maketitle
+\end{titlingpage}
+
 \newpage
 
-%\begin{multicols}{2}
 \tableofcontents
-%\end{multicols}
 
 \vfill
 
-The following are ``house rules'' and clarifications, a mish-mash of D\&D Basic/Expert a la \emph{Old-School Essentials}, \emph{Dolmenwood}, and a fantastic ruleset called \emph{\href{https://osrsimulacrum.blogspot.com/2021/06/simulacrum-beta-release.html}{Simulacrum}}. Rampant stealing has occurred below, and is intended only for use in my own home games.
+The following are ``house rules'' and clarifications, a mish-mash of D\&D Basic/Expert a la \emph{Old-School Essentials}, \emph{Dolmenwood}, and a fantastic ruleset called \emph{\href{https://osrsimulacrum.blogspot.com/2021/06/simulacrum-beta-release.html}{Simulacrum}}. Rampant stealing has occurred below, and is intended only for use in my own home games unless it's covered by fair use in which case I'm happy to share. Please don't sue me.
 
 Links: \href{https://docs.google.com/spreadsheets/d/1wOavveRJ8IEVoqvy33bxn12m20Y_7lqOkc9_KuXwJHo/copy}{Google Sheets Character Sheet} • \href{https://monogr.ph/694bf3d97da4a20a582eec2c}{Patch Notes}
 
